--- a/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -1,9 +1,9 @@
-<form>
+<form (ngSubmit)="onSubmit(titleInput.value, textInput.value, form) " #form>
   <app-control  label="Title">
-    <input type="text" name="title" id="title" />
+    <input type="text" name="title" id="title" #titleInput/>
   </app-control>
   <app-control  label="Request">
-    <textarea name="request" id="request" rows="3"></textarea>
+    <textarea name="request" id="request" rows="3" #textInput></textarea>
   </app-control>
 
   <p>
